--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.dark-mode {
+  background-color: black;
+}
+
+.dark-mode h1{
+  color: white;
+}
+
 .container{
   max-width: 960px;
   margin-right: auto;
@@ -62,10 +77,32 @@ textarea:focus{
   display: flex;  
   flex-direction: column;
   justify-content: space-between;
+  white-space: pre-wrap;
 } 
 
 .note-footer{
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.delete-icon {
+  cursor: pointer;
+}
+.search {
+  display: flex;
+  align-items: center;
+  background-color: #e1e1e1;
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 1.5em;
+}
+
+.search input {
+  border: none;
+  background-color: #e1e1e1;
+}
+
+.search input:focus{
+  outline: none;
 }
